<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stopButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.downloads.DownloadsPageFragment">


    <Button
        android:id="@+id/button2"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:text="@string/stop_service"
        android:textSize="11sp"
        android:tooltipText="@string/stop_background_service"
        app:cornerRadius="5dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        tools:targetApi="o" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="137dp"
        android:layout_height="38dp"
        android:text="@string/downloads"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="52dp"
        android:gravity="start"
        android:pointerIcon="arrow"
        app:cornerRadius="@android:dimen/app_icon_size"
        android:tooltipText="@string/exit_this_page"
        app:icon="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o" />

    <ListView
        android:id="@+id/downloadedHistory"
        android:layout_width="409dp"
        android:layout_height="668dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/downloaded_list_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />


</androidx.constraintlayout.widget.ConstraintLayout>