<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="264dp"
        android:layout_height="33dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textColor="?android:attr/colorForeground"
        android:includeFontPadding="true"
        android:text="@string/youtube_downloader"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_gravity="start"
        android:layout_marginStart="4dp"
        app:icon="@drawable/accpuntimg"
        app:cornerRadius="8dp"
        android:tooltipText="@string/start_service"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/downloadList"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:cornerRadius="8dp"
        app:icon="@drawable/download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gosearch"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:text="@string/searcher"
        android:gravity="center"
        app:cornerRadius="25dp"
        app:icon="@drawable/search_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

</androidx.constraintlayout.widget.ConstraintLayout>