<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/custom_controller_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageButton
            android:id="@+id/exo_rew"
            style="@style/ExoStyledControls.Button.Center.Previous"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/rewind"
            app:tint="@color/teal_200" />

        <ImageButton
            android:id="@+id/exo_play_pause"
            style="@style/ExoStyledControls.Button.Center.PlayPause"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/play_pause"
            app:tint="@color/teal_200"/>

        <ImageButton
            android:id="@+id/exo_ffwd"
            style="@style/ExoStyledControls.Button.Center.Next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/fast_forward"
            app:tint="@color/teal_200"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.media3.ui.DefaultTimeBar
            android:id="@+id/exo_progress"
            style="ExoStyledControls.TimeBar"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exo_position"
                style="ExoStyledControls.TimeText.Duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:tint="@color/teal_200"/>

            <TextView
                android:id="@+id/exo_duration"
                style="ExoStyledControls.TimeText.Position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/teal_200"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
